# tasker

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Environment.cmake
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  main.cpp
tasker/: CMakeLists.txt
tasker/include/tasker/: CancellationToken.h  Tasker.h
tasker/src/tasker/: Tasker.cpp
tasker/tests/src/: CancellationTokenTest.cpp
vanilo/: CMakeLists.txt
vanilo/include/vanilo/: Export.h
vanilo/include/vanilo/concurrent/: CancellationToken.h
vanilo/include/vanilo/core/: Binder.h  Object.h  Tracer.h  Traits.h  Utility.h
vanilo/include/vanilo/tasker/: CancellationToken.h  Tasker.h
vanilo/private/vanilo/concurrent/: ConcurrentQueue.h
vanilo/private/vanilo/tasker/: ConcurrentQueue.h  DefaultLocalThreadExecutor.h  DefaultThreadPoolExecutor.h  Scheduler.h
vanilo/src/vanilo/concurrent/: CancellationToken.cpp
vanilo/src/vanilo/core/: Tracer.cpp
vanilo/src/vanilo/tasker/: CancellationToken.cpp  ConcurrentQueue.cpp  DefaultLocalThreadExecutor.cpp  DefaultThreadPoolExecutor.cpp  Scheduler.cpp  Tasker.cpp
vanilo/tests/src/: CancellationTokenTest.cpp  CancellationTokenTests.cpp  ConcurrentQueueTests.cpp  DefaultThreadPoolExecutorTests.cpp  LifeCycleGuardTest.cpp  OptionalPromiseTest.cpp  SchedulerAndExecutorsTests.cpp  TaskContextTest.cpp  TaskExecutorTest.cpp  TaskExecutorTests.cpp  TaskInfrastructureTest.cpp  TaskInfrastructureTests.cpp  TaskRunnerTests.cpp
