if(BUILD_EXAMPLES)
    set(CURRENT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
    file(GLOB_RECURSE children LIST_DIRECTORIES true RELATIVE ${CURRENT_DIR} ${CURRENT_DIR}/*)
    set(DIRS "")

    foreach(child ${children})
        if(IS_DIRECTORY "${CURRENT_DIR}/${child}" AND EXISTS "${CURRENT_DIR}/${child}/CMakeLists.txt")
            message("${child}")
            add_subdirectory("${child}")
        endif()
    endforeach()
endif()
